fix: clarify comparison headers - Other Tutoring vs BEAM

--- a/index.html
+++ b/index.html
@@ -5733,8 +5733,8 @@
                     <table class="comparison-table" role="presentation">
                         <thead>
                             <tr>
-                                <th class="comparison-header comparison-header-generic">What You Hear</th>
-                                <th class="comparison-header comparison-header-beam">What BEAM Shows You</th>
+                                <th class="comparison-header comparison-header-generic">Other Tutoring</th>
+                                <th class="comparison-header comparison-header-beam">BEAM</th>
                             </tr>
                         </thead>
                         <tbody>
