fix: rename Diagnostic Worksheet → Custom Worksheet, clarify it targets diagnostic weaknesses

--- a/index.html
+++ b/index.html
@@ -5642,12 +5642,12 @@
                         </div>
                     </div>
 
-                    <!-- Diagnostic Worksheet - Top Right -->
+                    <!-- Custom Worksheet - Top Right -->
                     <div class="document-card document-paper">
                         <div class="document-preview" aria-hidden="true">
                             <div class="paper-mockup">
                                 <div class="paper-header">BEAM Academy</div>
-                                <div class="paper-title">Year 11 Maths - Diagnostic</div>
+                                <div class="paper-title">Year 11 Maths - Custom</div>
                                 <div class="paper-content">
                                     <div class="paper-question">Q1. Find ∫ 2x·e<sup>x²</sup> dx</div>
                                     <div class="paper-question">Q2. Differentiate y = sin(x²)</div>
@@ -5657,8 +5657,8 @@
                             </div>
                         </div>
                         <div class="document-info">
-                            <h3 class="document-name">Diagnostic Worksheet</h3>
-                            <p class="document-desc">20 targeted questions covering key syllabus topics</p>
+                            <h3 class="document-name">Custom Worksheet</h3>
+                            <p class="document-desc">Targets your weak spots identified in the diagnostic</p>
                         </div>
                     </div>
 
