--- a/index.html
+++ b/index.html
@@ -116,9 +116,26 @@
     <link rel="preconnect" href="https://www.googletagmanager.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700;800&family=Source+Serif+4:opsz,wght@8..60,400;8..60,500;8..60,600&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700;800&family=Source+Serif+4:opsz,wght@8..60,400;8..60,500;8..60,600&display=swap"></noscript>
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght,WONK@9..144,500..700,0..1&family=Bricolage+Grotesque:opsz,wght@12..96,400..600&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght,WONK@9..144,500..700,0..1&family=Bricolage+Grotesque:opsz,wght@12..96,400..600&display=swap"></noscript>
     <style>
+        /* Font fallback metrics to minimize CLS */
+        @font-face {
+            font-family: 'Fraunces-fallback';
+            src: local('Georgia');
+            ascent-override: 95%;
+            descent-override: 25%;
+            line-gap-override: 0%;
+            size-adjust: 105%;
+        }
+
+        @font-face {
+            font-family: 'Bricolage-fallback';
+            src: local('system-ui');
+            ascent-override: 90%;
+            descent-override: 22%;
+            size-adjust: 102%;
+        }
         :root {
             --purple-50: #faf5ff;
             --purple-100: #f3e8ff;
@@ -141,10 +158,27 @@
             --gray-800: #27272a;
             --gray-900: #18181b;
             --white: #ffffff;
-            /* Accent colors */
+            /* Accent colors (legacy) */
             --accent-pink: #ec4899;
             --accent-blue: #3b82f6;
             --accent-teal: #14b8a6;
+            /* =====================
+               ACCENT: Electric Lime (Phase 21.1)
+               ===================== */
+            --color-lime-400: #d9ff00;
+            --color-lime-500: #bfff00;     /* Primary accent */
+            --color-lime-600: #a6ff00;
+            /* =====================
+               SEMANTIC (Phase 21.1)
+               ===================== */
+            --color-primary: var(--purple-700);
+            --color-primary-dark: var(--purple-800);
+            --color-accent: var(--color-lime-500);
+            --color-accent-dark: var(--color-lime-600);
+            --color-text: var(--gray-800);
+            --color-text-muted: var(--gray-500);
+            --color-background: var(--white);
+            --color-surface: var(--gray-50);
             --font-display: 'Outfit', sans-serif;
             --font-body: 'Outfit', sans-serif;
             --focus-ring: 0 0 0 3px rgba(124, 58, 237, 0.4);
