--- a/index.html
+++ b/index.html
@@ -179,14 +179,73 @@
             --color-text-muted: var(--gray-500);
             --color-background: var(--white);
             --color-surface: var(--gray-50);
-            --font-display: 'Outfit', sans-serif;
-            --font-body: 'Outfit', sans-serif;
+            /* =====================
+               SPACING (Phase 21.1)
+               8px base scale
+               ===================== */
+            --space-1: 0.25rem;   /* 4px */
+            --space-2: 0.5rem;    /* 8px */
+            --space-3: 0.75rem;   /* 12px */
+            --space-4: 1rem;      /* 16px */
+            --space-5: 1.5rem;    /* 24px */
+            --space-6: 2rem;      /* 32px */
+            --space-8: 3rem;      /* 48px */
+            --space-10: 4rem;     /* 64px */
+            --space-12: 6rem;     /* 96px */
+            --space-16: 8rem;     /* 128px */
+            /* =====================
+               SHADOWS (Phase 21.1)
+               ===================== */
+            --shadow-sm: 0 1px 2px rgba(0, 0, 0, 0.04);
+            --shadow-md: 0 4px 6px -1px rgba(0, 0, 0, 0.07);
+            --shadow-lg: 0 10px 15px -3px rgba(0, 0, 0, 0.08);
+            --shadow-xl: 0 20px 25px -5px rgba(0, 0, 0, 0.1);
+            --shadow-purple: 0 8px 30px rgba(124, 58, 237, 0.2);
+            --shadow-lime: 0 4px 20px rgba(191, 255, 0, 0.3);
+            /* =====================
+               BORDERS (Phase 21.1)
+               ===================== */
+            --radius-sm: 4px;
+            --radius-md: 8px;
+            --radius-lg: 16px;
+            --radius-xl: 24px;
+            --radius-full: 9999px;
+            /* =====================
+               TRANSITIONS (Phase 21.1)
+               ===================== */
+            --transition-fast: 150ms ease;
+            --transition-base: 250ms ease;
+            --transition-slow: 400ms ease;
+            /* =====================
+               FLUID TYPE SCALE (Phase 21.1)
+               Base: 18px (360px) to 22px (1200px)
+               ===================== */
+            --text-xs: clamp(0.833rem, 0.79rem + 0.21vw, 0.96rem);    /* 13-15px */
+            --text-sm: clamp(0.938rem, 0.88rem + 0.29vw, 1.1rem);     /* 15-18px */
+            --text-base: clamp(1.063rem, 0.98rem + 0.41vw, 1.313rem); /* 17-21px */
+            --text-lg: clamp(1.2rem, 1.09rem + 0.55vw, 1.5rem);       /* 19-24px */
+            --text-xl: clamp(1.35rem, 1.2rem + 0.75vw, 1.75rem);      /* 22-28px */
+            --text-2xl: clamp(1.52rem, 1.32rem + 1vw, 2.1rem);        /* 24-34px */
+            --text-3xl: clamp(1.71rem, 1.44rem + 1.35vw, 2.5rem);     /* 27-40px */
+            --text-4xl: clamp(1.93rem, 1.56rem + 1.85vw, 3.25rem);    /* 31-52px */
+            --text-5xl: clamp(2.17rem, 1.68rem + 2.45vw, 3.75rem);    /* 35-60px */
+            --text-hero: clamp(2.75rem, 2rem + 3.75vw, 5rem);         /* 44-80px */
+            /* LINE HEIGHT */
+            --leading-tight: 1.1;     /* Hero headlines */
+            --leading-snug: 1.25;     /* Subheadings */
+            --leading-normal: 1.5;    /* Body text */
+            --leading-relaxed: 1.65;  /* Long-form (accessibility) */
+            /* LETTER SPACING */
+            --tracking-tight: -0.025em;  /* Large headlines */
+            --tracking-normal: 0;
+            --tracking-wide: 0.05em;     /* All caps labels */
+            /* =====================
+               FONTS (Phase 21.1)
+               ===================== */
+            --font-display: 'Fraunces', 'Fraunces-fallback', Georgia, serif;
+            --font-body: 'Bricolage Grotesque', 'Bricolage-fallback', system-ui, sans-serif;
             --focus-ring: 0 0 0 3px rgba(124, 58, 237, 0.4);
-            /* Enhanced shadows */
-            --shadow-sm: 0 1px 2px rgba(0, 0, 0, 0.04), 0 1px 3px rgba(0, 0, 0, 0.06);
-            --shadow-md: 0 4px 6px -1px rgba(0, 0, 0, 0.07), 0 2px 4px -1px rgba(0, 0, 0, 0.04);
-            --shadow-lg: 0 10px 15px -3px rgba(0, 0, 0, 0.08), 0 4px 6px -2px rgba(0, 0, 0, 0.04);
-            --shadow-xl: 0 20px 25px -5px rgba(0, 0, 0, 0.08), 0 10px 10px -5px rgba(0, 0, 0, 0.03);
+            /* Legacy shadows for compatibility */
             --shadow-glow: 0 0 80px rgba(124, 58, 237, 0.25);
             --shadow-card: 0 4px 20px rgba(0, 0, 0, 0.06);
             --shadow-card-hover: 0 25px 80px rgba(124, 58, 237, 0.18);
@@ -249,10 +308,17 @@
 
         body {
             font-family: var(--font-body);
+            font-size: var(--text-base);
+            line-height: var(--leading-normal);
             color: var(--gray-800);
-            line-height: 1.7;
             background: var(--white);
             -webkit-font-smoothing: antialiased;
+        }
+
+        p {
+            font-family: var(--font-body);
+            font-size: var(--text-base);
+            line-height: var(--leading-normal);
         }
 
         .skip-link {
@@ -284,10 +350,21 @@
             box-shadow: var(--focus-ring);
         }
 
-        h1, h2, h3, h4, h5, h6 {
+        h1, h2, h3 {
+            font-family: var(--font-display);
+            line-height: var(--leading-tight);
+            letter-spacing: var(--tracking-tight);
+            color: var(--gray-900);
+        }
+
+        h1 { font-size: var(--text-5xl); font-weight: 700; }
+        h2 { font-size: var(--text-4xl); font-weight: 600; }
+        h3 { font-size: var(--text-2xl); font-weight: 600; }
+
+        h4, h5, h6 {
             font-family: var(--font-display);
             font-weight: 600;
-            line-height: 1.2;
+            line-height: var(--leading-snug);
         }
 
         a { color: inherit; text-decoration: none; }
