feat(21.1-01): update font family tokens for Fraunces and Bricolage
- Set --font-display to Fraunces with Georgia fallback
- Set --font-body to Bricolage Grotesque with Outfit fallback
- Outfit fallback ensures page works until new fonts load in Plan 02

--- a/index.html
+++ b/index.html
@@ -242,8 +242,8 @@
             /* =====================
                FONTS (Phase 21.1)
                ===================== */
-            --font-display: 'Fraunces', 'Fraunces-fallback', Georgia, serif;
-            --font-body: 'Bricolage Grotesque', 'Bricolage-fallback', system-ui, sans-serif;
+            --font-display: 'Fraunces', Georgia, serif;
+            --font-body: 'Bricolage Grotesque', 'Outfit', system-ui, sans-serif;
             --focus-ring: 0 0 0 3px rgba(124, 58, 237, 0.4);
             /* Legacy shadows for compatibility */
             --shadow-glow: 0 0 80px rgba(124, 58, 237, 0.25);
