--- a/index.html
+++ b/index.html
@@ -817,12 +817,18 @@
             border: 1px solid var(--purple-200);
         }
 
+        /* Hero headline - THE DIFFERENTIATOR */
         .hero h1 {
-            font-size: clamp(2.8rem, 6vw, 4.5rem);
+            font-family: var(--font-display);
+            font-size: var(--text-hero);
+            font-weight: 700;
+            font-variation-settings: 'WONK' 1, 'SOFT' 50;
+            line-height: var(--leading-tight);
+            letter-spacing: var(--tracking-tight);
             color: var(--gray-900);
-            margin-bottom: 24px;
-            letter-spacing: -0.03em;
-            line-height: 1.1;
+            transform: rotate(-2deg);
+            transform-origin: left center;
+            margin-bottom: var(--space-6);
         }
 
         .hero h1 span {
@@ -4032,7 +4038,12 @@
             .mobile-toggle { display: flex; }
 
             .hero { padding: 100px 0 60px; }
-            .hero h1 { font-size: clamp(2rem, 4vw, 2.75rem); }
+            /* Remove tilt on mobile - prevents overflow/cropping */
+            .hero h1 {
+                font-size: clamp(2rem, 4vw, 2.75rem);
+                transform: none;
+                font-variation-settings: 'WONK' 0.5; /* Reduced wonk for readability */
+            }
             .hero-buttons {
                 flex-direction: column;
                 gap: 12px;
