--- a/index.html
+++ b/index.html
@@ -1163,15 +1163,83 @@
             margin-bottom: 16px;
         }
 
+        /* Section Titles - Phase 21.1 Design System */
         .section-title {
-            font-size: clamp(2rem, 4vw, 2.75rem);
+            font-family: var(--font-display);
+            font-size: var(--text-4xl);
+            font-weight: 600;
+            line-height: var(--leading-tight);
+            letter-spacing: var(--tracking-tight);
             color: var(--gray-900);
-            margin-bottom: 20px;
+            margin-bottom: var(--space-6);
+        }
+
+        /* Section title accent span (for colored words) */
+        .section-title-accent,
+        .section-title span,
+        .title-accent {
+            color: var(--purple-700);
         }
 
         .section-description {
-            font-size: 1.15rem;
+            font-family: var(--font-body);
+            font-size: var(--text-lg);
+            line-height: var(--leading-normal);
             color: var(--gray-500);
+        }
+
+        /* =====================
+           CARD TYPOGRAPHY (Phase 21.1)
+           Consistent card titles and body text
+           ===================== */
+
+        /* Card Titles - Fraunces */
+        .card-title,
+        .document-card h3,
+        .tutor-card h3,
+        .feature-title {
+            font-family: var(--font-display);
+            font-size: var(--text-xl);
+            font-weight: 500;
+            line-height: var(--leading-snug);
+            color: var(--gray-900);
+        }
+
+        /* Card Body Text - Bricolage */
+        .card-body,
+        .feature-description {
+            font-family: var(--font-body);
+            font-size: var(--text-base);
+            line-height: var(--leading-normal);
+            color: var(--gray-600);
+        }
+
+        /* Price Amounts - Display font for emphasis */
+        .price,
+        .pricing-amount,
+        .price-amount {
+            font-family: var(--font-display);
+            font-weight: 700;
+        }
+
+        /* Labels and Badges - Small caps style */
+        .badge,
+        .label,
+        .tag,
+        .section-tag {
+            font-family: var(--font-body);
+            font-weight: 600;
+            text-transform: uppercase;
+            letter-spacing: var(--tracking-wide);
+        }
+
+        /* Quotes and Testimonials */
+        blockquote,
+        .quote {
+            font-family: var(--font-body);
+            font-style: italic;
+            line-height: var(--leading-relaxed);
+            color: var(--gray-700);
         }
 
         /* Proof Section */
@@ -2717,15 +2785,19 @@
         }
 
         .course-card h3 {
-            font-size: 1.15rem;
+            font-family: var(--font-display);
+            font-size: var(--text-xl);
+            font-weight: 500;
+            line-height: var(--leading-snug);
             color: var(--white);
             margin-bottom: 12px;
         }
 
         .course-card p {
-            font-size: 0.95rem;
+            font-family: var(--font-body);
+            font-size: var(--text-base);
             color: var(--gray-400);
-            line-height: 1.6;
+            line-height: var(--leading-normal);
             flex-grow: 1;
             margin-bottom: 20px;
         }
